fix pathing with express.static

--- a/views/main.hbs
+++ b/views/main.hbs
@@ -6,7 +6,7 @@
     <title>Challenge Class 10</title>
   </head>
   <body>
-    <h1>aca renderizo el main.hbs</h1>
+    <h1>CREATE PRODUCT</h1>
     <div class="container mt-5">
       <div class="row">
         <div class="col">
@@ -32,6 +32,6 @@
         </div>
       </div>
     </div>
-    <script src="{{script}}"></script>
+    <script src="{{scriptPath}}"></script>
   </body>
 </html>
