--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,11 +3,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge Class 10</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <title>Create Product</title>
   </head>
   <body>
     <h1>CREATE PRODUCT</h1>
     <div class="container mt-5">
+      <a href="http://localhost:8080/listProducts">
+        <button>View products</button>
+      </a>
       <div class="row">
         <div class="col">
           <form id="data">
@@ -17,21 +26,23 @@
             </div>
             <div class="mb-3">
               <label class="form-label">Price</label>
-              <input type="number" class="form-control" id="price" />
+              <input class="form-control" id="price" />
             </div>
             <div class="mb-3">
-              <label class="form-label">thumbnail</label>
+              <label class="form-label">Thumbnail</label>
               <input class="form-control" id="thumbnail" />
             </div>
             <button
-              type="button"
+              type="submit"
               class="btn btn-primary"
               onclick="createProduct()"
-            >Guardar</button>
+            >
+              Guardar
+            </button>
           </form>
         </div>
       </div>
     </div>
-    <script src="{{scriptPath}}"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
