--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,19 +3,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Create Product</title>
   </head>
-  <body>
-    <h1>CREATE PRODUCT</h1>
+  <body class="m-5">
+    <h1 class="text-primary">CREATE PRODUCT</h1>
     <div class="container mt-5">
       <a href="http://localhost:8080/listProducts">
-        <button>View products</button>
+        <button class="btn btn-primary mb-2">View products</button>
       </a>
       <div class="row">
         <div class="col">
