--- a/views/listProducts.ejs
+++ b/views/listProducts.ejs
@@ -3,18 +3,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>APP</title>
   </head>
   <body>
     <div class="container mt-5">
       <a href="http://localhost:8080/">
-        <button>Go Back</button>
+        <button class="btn btn-primary mb-3">Go Back</button>
       </a>
       <div class="row">
         <div class="col">
@@ -27,9 +22,9 @@
             <tbody>
               <% data.forEach(producto => { %>
               <tr>
-                <td><%= producto.title %></td>
-                <td>AR$<%= producto.price %></td>
-                <td><img src="<%= producto.thumbnail %>" height="30px" /></td>
+                <td class="text-primary fs-2"><%= producto.title %></td>
+                <td class="text-primary fs-2">AR$<%= producto.price %></td>
+                <td class="text-primary fs-2"><img src="<%= producto.thumbnail %>" height="30px" /></td>
               </tr>
               <% }) %>
             </tbody>
