--- a/views/listProducts.hbs
+++ b/views/listProducts.hbs
@@ -3,17 +3,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     <title>List</title>
   </head>
-  <body>
-     <a href="http://localhost:8080/">
-      <button>Go Back</button>
-    </a>
+  <body class="m-5">
+    <div class="container my-5">
+      <a class="mt-3" href="http://localhost:8080/">
+        <button class="btn btn-primary">Go Back</button>
+      </a>
+    </div>
     {{#each data}}
-      <h3>{{this.title}}</h3>
-      <ul>
-        <li>{{this.price}}</li>
-        <li><img src="{{this.thumbnail}}" alt="" srcset="" /></li>
+      <h3 class="text-primary">{{this.title}}</h3>
+      <ul class="list-group">
+        <li class="list-group-item">{{this.price}}</li>
+        <li class="list-group-item img-thumbnail"><img src="{{this.thumbnail}}" alt="" srcset="" /></li>
       </ul>
     {{/each}}
   </body>
