--- a/views/listProducts.hbs
+++ b/views/listProducts.hbs
@@ -9,7 +9,11 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    {{!-- <link rel="stylesheet" href="style.css" /> --}}
     <title>List</title>
+    <style>
+      .foto{ width: 40px; height: 40px; }
+    </style>
   </head>
   <body class="m-5">
     <div class="container my-5">
@@ -21,7 +25,11 @@
       <h3 class="text-primary">{{this.title}}</h3>
       <ul class="list-group">
         <li class="list-group-item">{{this.price}}</li>
-        <li class="list-group-item img-thumbnail"><img src="{{this.thumbnail}}" alt="" srcset="" /></li>
+        <li  class="list-group-item foto" style="width: 100%; height: 100%;"><img
+            src="{{this.thumbnail}}"
+            alt="image"
+            srcset=""
+          /></li>
       </ul>
     {{/each}}
   </body>
