--- a/views/form.ejs
+++ b/views/form.ejs
@@ -28,7 +28,7 @@
               <input class="form-control" id="thumbnail" />
             </div>
             <button
-              type="submit"
+              type="button"
               class="btn btn-primary"
               onclick="createProduct()"
             >
